theme/theme.css
/* ... */
.lSSlideOuter.lSrtl .rightEnd {
  -webkit-animation: leftEnd 0.3s;
  animation: leftEnd 0.3s;
  position: relative;
}
.lSSlideOuter.lSrtl .leftEnd {
  -webkit-animation: rightEnd 0.3s;
  animation: rightEnd 0.3s;
  position: relative;
}
.lightSlider.lsGrab > * {
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: -o-grab;
  cursor: -ms-grab;
  cursor: grab;
}
.lightSlider.lsGrabbing > * {
  cursor: move;
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: -o-grabbing;
  cursor: -ms-grabbing;
  cursor: grabbing;
}
@media only screen and (max-width: 68.75em) {
  #wpadminbar,
  .search-close,
  .searchtrigger {
    display: none;
  }
  #site-wrap {
    padding-top: 230px;
  }
  .remove-margin {
    margin-top: 0 !important;
  }
  .searchform {
    position: fixed;
    top: 0;
    opacity: 0;
    visibility: visible;
    z-index: 99999;
    padding: 0.5em 0;
  }
  .searchform form {
    max-width: none;
  }
  header.small .searchform {
    z-index: 1;
  }
  header.small {
    top: 56px !important;
  }

  header nav .has-children ul li a:after,
  header nav .has-children > a:after,
  header nav ul li.full-width-sub-menu ul:before {
    content: none;
  }

  .admin-bar header.small,
  header,
  header.small {
    top: 0;
  }
  .header-menu {
    display: none;
    background: url(/wp-content/themes/littlemonsters/images/svg/balloons.svg)
      bottom center no-repeat #fff;
  }
  header.small .header-menu.shown {
    top: 118px;
  }
  .header-menu.shown {
    display: block;
    position: fixed;
    top: 150px;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 999999;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
  }
  .close-icon .icon,
  header nav ul li,
  header nav ul li.full-width-sub-menu {
    position: relative;
  }
  #upper-footer .menu-legals nav.shown .close-icon,
  .header-menu.shown .close-icon,
  .nav-trigger {
    display: block;
  }
  .nav-trigger {
    width: 80%;
  }
  .close-icon {
    text-align: right;
    padding-right: 1.2em;
  }
  .close-icon .icon {
    margin-left: 0.8em;
    top: 4px;
  }
  header nav .has-children ul,
  header nav ul,
  header nav ul li ul,
  header nav ul li.full-width-sub-menu ul {
    position: relative;
    width: 100%;
    padding: 0;
    margin: 0;
    left: 0;
    background: 0 0;
    border: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    top: 0 !important;
    opacity: 1;
    visibility: visible;
  }
  header nav ul {
    background: #fff;
  }
  header nav ul li.full-width-sub-menu ul {
    -moz-column-count: unset;
    -webkit-column-count: unset;
    column-count: unset;
    -webkit-column-width: 1000px;
    -moz-column-width: 1000px;
    column-width: 1000px;
    padding-top: 0;
    padding-bottom: 0;
  }
  header nav .has-children ul,
  header nav ul li.full-width-sub-menu ul {
    display: none;
    border-top: 1px solid #ebebeb;
    background: #f5f5f5;
  }
  header nav .has-children ul.shown,
  header nav ul li.full-width-sub-menu ul.shown {
    display: block;
  }
  header nav ul li {
    width: 100%;
    display: block;
    margin: 0;
    padding: 0;
  }
  header nav .has-children ul li a,
  header nav ul li a,
  header nav ul li.full-width-sub-menu ul li a {
    display: block;
    padding: 1em 2em;
    border-top: 1px solid #ebebeb;
    border-left: none;
    border-right: none;
  }
  header nav ul li:last-child a {
    border-bottom: 1px solid #ebebeb;
  }
  header nav .has-children ul li a:hover,
  header nav ul li a:hover {
    background: 0 0;
    color: inherit;
  }
  #menu-item-31,
  #menu-item-31:hover {
    background: 0 0;
  }
  header nav ul li#menu-item-31 > a {
    color: #707070;
  }
  .sub-menu-trigger {
    display: block;
    padding-top: 7px;
    width: 50px;
    height: 50px;
    position: absolute;
    top: 0;
    right: 0;
    text-align: center;
    border-left: 1px solid #ebebeb;
    cursor: pointer;
  }
  .breadcrumbs,
  .error {
    display: none;
  }
  .sub-menu-trigger:before {
    content: "\f055";
    font-family: FontAwesome;
    font-size: 24px;
    color: #fb7820;
  }
  .sub-menu-trigger.shown:before {
    content: "\f056";
  }
  .the_enquiry_form .wrapper {
    margin-top: 5%;
    background-size: 100% auto;
  }
  label i {
    top: 18px;
  }
  .error {
    position: static;
    clear: both;
    margin-top: 5px;
    padding: 0;
    min-height: 0;
    border: none;
  }
  .error-email-phone {
    margin-bottom: 10px;
  }
  .error.show {
    display: block;
  }
  .close {
    width: 45px;
    height: 45px;
    padding-top: 10px;
  }
  #upper-footer .enquire,
  #upper-footer .phone {
    padding-left: 1.5em;
    padding-right: 1.5em;
    text-align: center;
  }
  #upper-footer .phone:after {
    margin-left: -15px;
  }
  #pagination {
    background: 0 0;
    padding: 0;
    margin-bottom: 2em;
    box-shadow: none;
  }
  .pagination a,
  .pagination span.current {
    padding: 0.4em 1em;
    background: #fff;
    border: 1px solid #ebebeb;
    margin: 0 0.5em;
    text-align: center;
  }
  #pagination > :first-child,
  .products .pagination {
    margin-left: 0;
  }
}
/* ... */

